[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "randomix"
version = "0.1.2"
description = "A library for key management in JAX."
authors = [
    { name = "Tuomas J. Lukka", email = "tjl@hipcode.fi" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jax",
    "jaxlib"
]

[project.optional-dependencies]
dev = ["pytest", "twine"]

[project.urls]
"Homepage" = "https://github.com/tjltjl/randomix"
"Repository" = "https://github.com/tjltjl/randomix"

[tool.setuptools]
py-modules = ["randomix"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["."]
